Add schema templates

--- a/templates/_examples/fields/array.twig
+++ b/templates/_examples/fields/array.twig
@@ -101,7 +101,7 @@ fields:
 
 
   <h3>{{ '{% display %}' }}</h3>
-  <p>Use the <code>display</code> helper to render the items in an
+  <p>Use the <code>display</code> helper to render the visible items in an
     instance array. If you need the rendered output as a variable, please use
     the <code>html</code> method.</p>
   {% example %}
