--- a/templates/_examples/tools/image-tags-global.twig
+++ b/templates/_examples/tools/image-tags-global.twig
@@ -1,4 +1,4 @@
-label: "Tools: Image tags - global"
+label: "Tools: Image tags - Global"
 rootSchema: true
 fields:
   image: image
@@ -12,6 +12,6 @@ fields:
     image tag with a globally defined configuration, it is sufficient to pass the name
     of the global configuration to the <code>imageTage</code> helper.</p>
   {% example %}
-    <pre>{{ image.imageTag('myFluidImageTag') }}</pre>
+    {{ image.imageTag('egFluidImage') }}
   {% endexample %}
 {% endblock %}
