--- a/templates/_layouts/default.twig
+++ b/templates/_layouts/default.twig
@@ -15,6 +15,7 @@
     h1 { border-bottom: 1px solid #dee2e6; }
     h2 { margin-top: 3rem; border-bottom: 1px solid #dee2e6; }
     h3 { margin-top: 3rem; }
+    h4 { margin-top: 3rem; }
     .tab-content + p { margin-top: 2rem; }
   </style>
 </head>
