--- a/templates/_examples/tools/image-tags-picture.twig
+++ b/templates/_examples/tools/image-tags-picture.twig
@@ -7,29 +7,33 @@ fields:
 
 {% block content %}
   <h1>Image tags: Picture</h1>
-  <p>The picture image tag generates a picture tag. The attribute <code>sources</code>
-    is required, it defines an array of possible sources. Each source must contain
-    a <code>transform(s)</code> attribute defining the image transforms associated
-    with that source. Additional attributes can be passed using the
-    <code>attributes</code> option to each source.</p>
+  <p>The picture image tag renders a <code>picture</code> html tag. It is an extension
+    of the <a href="image-tags-image">image</a> tag, all options available for the
+    <code>image</code> tag are available for the <code>picture</code>
+    tag too.</p>
+  <p>Additionally, the option <code>transformGroups</code> can be set to define multiple
+    source tags. The option <code>transformGroups</code> can either be an array or an
+    object containing multiple group definitions. Each group definition must contain
+    a <code>transform</code> or <code>transforms</code> option specifying the asset
+    transforms of that group.</p>
+  <p>Other options set on transform groups will be rendered as attributes on the
+    corresponding <code>source</code> tag.</p>
   {% example %}
     {{ image.imageTag({
       type: 'picture',
-      attributes: {
-        class: 'figure-img img-fluid rounded'
-      },
-      sources: [
-        {
-          attributes: { media: '(max-width: 991px)' },
-          transform: { mode: 'crop', width: 416, height: 293 },
-        }, {
-          transform: { mode: 'crop', width: 696, height: 489 },
+      class: 'figure-img img-fluid rounded',
+      transformGroups: {
+        mobile: {
+          media: "(max-width:767px)",
+          transforms: [
+            { mode: 'crop', height: 240, width: 320 },
+            { mode: 'crop', height: 480, width: 640 },
+          ]
+        },
+        desktop: {
+          transform: { mode: 'crop', height: 768, width: 1024 },
         }
-      ]
+      }
     }) }}
   {% endexample %}
-
-  <p>Like the wrapped image tag, pictures support noscript fallback images
-    and placeholder tags.</p>
-  <p><a href="image-tags-wrapped" class="btn btn-primary">Image tags: Wrapped</a></p>
 {% endblock %}
