--- a/templates/_examples/tools/image-tags.twig
+++ b/templates/_examples/tools/image-tags.twig
@@ -13,9 +13,7 @@ fields:
     the image will be rendered.</p>
   {% example %}
     {{ image.imageTag({
-      attributes: {
-        class: 'figure-img img-fluid rounded'
-      }
+      class: 'figure-img img-fluid rounded'
     }) }}
   {% endexample %}
 
@@ -25,31 +23,30 @@ fields:
   {% example %}
     {% set asset = image.first %}
     {{ imageTag(asset, {
-      attributes: {
-        class: 'figure-img img-fluid rounded'
-      }
+      class: 'figure-img {$width} img-fluid rounded'
     }) }}
   {% endexample %}
 
   <h2>Image tag types</h2>
   <p>This helper supports rendering of different image tag types.</p>
 
-  <h3>Default</h3>
-  <p>The default image tag renderer creates a plain <code>img</code> tag. It supports
+  <h3>Image</h3>
+  <p>The image tag renderer creates a plain <code>img</code> tag. It supports
     the <code>srcset</code> attribute.</p>
-  <p><a href="image-tags-default" class="btn btn-primary">Image tags: Default</a></p>
-
-  <h3>Wrapped</h3>
-  <p>The wrapped image tag renderer creates an <code>img</code> tag that is wrapped
-    by an additional html element like a <code>div</code> tag. Can additionally
-    render a placeholder and <code>noscript</code> tag.</p>
-  <p><a href="image-tags-wrapped" class="btn btn-primary">Image tags: Wrapped</a></p>
+  <p><a href="image-tags-image" class="btn btn-primary">Image tags: Image</a></p>
 
   <h3>Picture</h3>
-  <p>The picture image tag renderer creates a <code>picture</code> tag. Supports
-    multiple <code>source</code> tags and can render a <code>noscript</code>
-    fallback image.</p>
+  <p>The picture image tag renderer creates a <code>picture</code> tag.</p>
   <p><a href="image-tags-picture" class="btn btn-primary">Image tags: Picture</a></p>
+
+  <h3>Template</h3>
+  <p>The template image tag renderers a Twig template.</p>
+  <p><a href="image-tags-template" class="btn btn-primary">Image tags: Template</a></p>
+
+  <h3>Configuration</h3>
+  <p>The configuration image tag renderers a html tag based upon a flexible
+    configuration structure.</p>
+  <p><a href="image-tags-config" class="btn btn-primary">Image tags: Configuration</a></p>
 
   <h2>Global definitions</h2>
   <p>In order to be able to reuse the image configurations, the plugin allows them to be
